--- a/src/main.jade
+++ b/src/main.jade
@@ -4,266 +4,7 @@ html(lang='en')
 		title Justicon
 		include ./partials/head.jade
 	body
-		.header
-			.wrap
-				a.logotype-holder(href='/')
-					// here is for SEO
-					.logo.logo-ru.invisible Justicon
-					img(src="http://justicon.ua/bitrix/templates/usticon/i/logo.png", alt="Justicon")
-				.bccall#cellphones-list
-					.phones-holder
-						.mainphone.fl (044) 221 4000
-						.phones-list
-							.life.fl
-								|  (093) 1000 176 
-							.clear
-							.viber.fl
-								|  (093) 1000 176
-							.clear
-							.kyivstar.fl
-								|  (098) 1000 176
-					span.blue
-						a.r-pimp.calll(href='#') Обратный звонок
-
-				.menu2
-					ul
-						li
-							a(href='#')
-								span Почему мы
-							.submenu
-								a.close(href='#')
-								.inner
-									.block-item
-										.title
-											a(href='/about/') О компании
-									.block-item
-										.title
-											a(href='/uspeshnyy-rezultat/') Успешный результат
-									.block-item
-										.title
-											a(href='/nashi-klienty/') Наши клиенты
-									.block-item
-										.title
-											a(href='/aktsii-i-predlozheniya/') Акции и предложения
-									.block-item
-										.title
-						li
-							a(href='#')
-								span Пресс-центр
-							.submenu
-								a.close(href='#')
-								.inner
-									.block-item
-										.title
-											a(href='/press-tsentr/novosti-prava/') Новости права
-									.block-item
-										.title
-											a(href='/press-tsentr/expert/') Мнение эксперта
-									.block-item
-										.title
-											a(href='/press-tsentr/publikatsii/') Публикации
-									.block-item
-										.title
-											a(href='/press-tsentr/rassylka/') Рассылка
-						li
-							a(href='/kontakty/')
-								span Контакты
-							.submenu2
-								a.close(href='#')
-								.header
-									a(href='#')
-										span Контакты
-								.inner
-									.title Телефоны для связи
-									.subphones
-										.blackphone.fl
-										span +38 (044) 221-4000
-										div
-											span      
-											.clear
-											.life.fl
-											span +38 (093) 1000 176
-											br
-											.viber.fl
-											span +38 (093) 1000 176
-										div
-											br
-											.clear
-											.kyivstar.fl
-											span +38 (098) 1000 176
-											.clear
-									.hr.separate10
-									span.blue
-										a.r-pimp.calll(href='#') Заказать обратный звонок
-									span.blue
-										a.r-pimp(href='#') Позвонить с сайта
-									br
-									span.blue
-										a.r-pimp.zaprosl(href='#') Заказать услугу
-									br
-									span.blue
-										a.r-pimp.zaprosconl(href='#') Заказать консультацию
-									.hr.separate10
-									|                             Email: 
-									span.blue
-										a.r-pimp(href='#') info@justicon.ua
-									br
-									|                             Skype 
-									span.blue
-										a.r-pimp(href='#') justicon.ua
-									.hr.separate10
-									.separate10.hg1
-									span.blue
-										a.r-pimp(href='/kontakty/') Посмотреть больше контактов
-
-				.langs
-					a.rus.actlang(href='/') RU
-					a.ukr(href='/ua/') UA
-					a.eng(href='#') EN
-					.clear
-			.clear
-		.fill
-		.menu.fixed
-			.wrap
-				.gamburger(data-modal="#mobile-menu")
-					span
-					span
-					span
-				ul
-					li.first
-						a(href='/')
-							img(src='/bitrix/templates/usticon/i/sprites/smlogo.png')
-					li
-						a(href='/uslugi/')
-							span Услуги
-						.submenu
-							a.close(href='#')
-							.inner
-								.block-item
-									.title Корпоративные правоотношения
-									ul
-										li
-											a(href='/uslugi/korp/registratsiya/') Регистрация
-										li
-											a(href='/uslugi/korp/izmeneniya/') Изменения
-										li
-											a(href='/uslugi/korp/likvidatsiya/') Ликвидация
-										li
-											a(href='/uslugi/korp/soputstv/') Сопутствующие и дополнительные услуги
-									.title Лицензии, разрешения, сертификация
-									ul
-										li
-											a(href='/uslugi/lits/litsenzii/') Лицензии
-										li
-											a(href='/uslugi/lits/razresheniya/') Разрешения
-										li
-											a(href='/uslugi/lits/sertifikatsiya/') Сертификация
-								.block-item
-									.title Судебная практика
-									ul
-										li
-											a(href='/uslugi/sud/predst/') Представительство интересов в судах
-										li
-											a(href='/uslugi/sud/ispoln/') Представительство в исполнительном производстве
-										li
-											a(href='/uslugi/sud/dolg/') Возврат долгов
-										li
-											a(href='/uslugi/sud/praktiki/') Судебные практики
-									.title Недвижимость, строительство, земельное право
-									ul
-										li
-											a(href='/uslugi/zem/nedv/') Недвижимость
-										li
-											a(href='/uslugi/zem/stroi/') Строительство
-										li
-											a(href='/uslugi/zem/zem-pr/') Земельное право
-								.block-item
-									.title Миграционное право
-									ul
-										li
-											a(href='/uslugi/migr/immigr/') Иммиграция в Украину
-										li
-											a(href='/uslugi/migr/emigr/') Эмиграция из Украины
-										li
-											a(href='/uslugi/migr/soputstv-uslugi/') Сопутствующие услуги
-									.title Интеллектуальное право
-									ul
-										li
-											a(href='/uslugi/int/reg/') Регистрация торговых марок
-										li
-											a(href='/uslugi/int/patent/') Патентование устройств, способов, веществ, внешнего вида изделия
-										li
-											a(href='/uslugi/int/avtor/') Авторское право
-								.block-item
-									.title Абонентское обслуживание
-									ul
-										li
-											a(href='/uslugi/abon/a-y/') Абонентское юридическое обслуживание
-										li
-											a(href='/uslugi/abon/b-u/') Бухгалтерские услуги. Аутсорсинг
-										li
-											a(href='/uslugi/abon/d-b/') Дополнительные бухгалтерские услуги
-										li
-											a(href='/uslugi/abon/k-s/') Кадровое сопровождение
-									.title Налоговый и юридический консалтинг. Антимонопольное право
-									ul
-										li
-											a(href='/uslugi/konsalting/nalog/') Налоговый консалтинг
-										li
-											a(href='/uslugi/konsalting/yur/') Юридический консалтинг
-										li
-											a(href='/uslugi/konsalting/antimonopolnoe-pravo/') Антимонопольное право
-										li
-											a(href='/uslugi/konsalting/tamozhenno-brokerskie-uslugi/') Таможенно-брокерские услуги
-					li
-						a(href='/prays-list/')
-							span Прайс-лист
-					li
-						a(href='#')
-							span Информ-бюро
-						.submenu
-							a.close(href='#')
-							.inner
-								.block-item
-									.title Адресная книга
-									//
-										<ul>
-										<li><a href="/inform-byuro/adresnaya-kniga/adresa-ovir/">Адреса ОВИР</a></li>
-										<li><a href="/inform-byuro/adresnaya-kniga/adresa-sudy/">Адреса суды</a></li>
-										</ul>
-									ul
-										li
-											a.root-item(href='/inform-byuro/adresnaya-kniga/adresa-ovir/') Адреса ОВИР
-										li
-											a.root-item(href='/inform-byuro/adresnaya-kniga/adresa-sudy/') Адреса суды
-									.menu-clear-left
-								.block-item
-									.title Справочная информация
-									//
-										<ul>
-										<li><a href="/inform-byuro/spravochnaya-informatsiya/kved-2012/">Квед 2012</a></li>
-										<li><a href="/inform-byuro/spravochnaya-informatsiya/kvota-immigratsii/">Квота иммиграции</a></li>
-										<li><a href="/inform-byuro/spravochnaya-informatsiya/kodifikator-stroitelnykh-rabot/">Кодификатор строительных работ</a></li>
-										</ul>
-									ul
-										li
-											a.root-item(href='/inform-byuro/spravochnaya-informatsiya/kved-2012/') Квед 2012
-										li
-											a.root-item(href='/inform-byuro/spravochnaya-informatsiya/kodifikator-stroitelnykh-rabot/') Кодификатор строительных работ
-										li
-											a.root-item(href='/inform-byuro/spravochnaya-informatsiya/kvota-immigratsii/') Квота иммиграции
-									.menu-clear-left
-								.block-item
-									.title Архив
-					li
-						a(href='/pro-bono/')
-							span Про BONO
-				.search
-					#title-search
-						form#searchform(action='/search/index.php')
-							input#title-search-input(type='text', name='q', value='', autocomplete='off')
-							input.zoom(name='s', type='submit', value='')
-				.clear
+		include ./partials/navigation.jade
 		.container
 			.promo
 				.wrap2
@@ -633,8 +374,6 @@ html(lang='en')
 						input.text(type='text', placeholder='Поиск')
 						input.submit(type='submit', value='найти')
 
-		#totop.bl-button
-			span Наверх
 		noscript
 			| <div><img src="//mc.yandex.ru/watch/14609872" style="position:absolute; left:-9999px;" alt="" /></div>
 		// /Yandex.Metrika counter
