--- a/src/css/animations.sass
+++ b/src/css/animations.sass
@@ -16,6 +16,23 @@
 		transform: translate(0, 40px)
 		opacity: 0
 
+@keyframes mobileMenuOpen
+	from
+		transform: translate(40px, 0)
+		opacity: 0
+
+	to
+		transform: translate(0, 0)
+		opacity: 1
+@keyframes mobileMenuClose
+	from
+		transform: translate(0, 0)
+		opacity: 1
+
+	to
+		transform: translate(40px, 0)
+		opacity: 0
+
 @keyframes fadeIn
 	from
 		opacity: 0
