--- a/src/search.jade
+++ b/src/search.jade
@@ -144,10 +144,12 @@ html(lang='en')
 										b Закона
 										|  Украины "О защите экономической конкуренции" ...
 									.search-item-meta
+								// add class search-info
 								font.text
 									| Результаты поиска 
 									| 1 - 10 из 288
 									br
+								// add classes for pages and each navigation elements
 								font.text
 									| Начало | Пред. |
 									b 1
