--- a/src/search.jade
+++ b/src/search.jade
@@ -168,6 +168,7 @@ html(lang='en')
 				.clear
 			.pd10.hg1
 
+		// add block
 		.wrap
 			.consult-me-block
 				h2 Не нашли ответ? <br />Свяжитесь с нами и мы вас бесплатно проконсультируем.
