--- a/src/css/global.sass
+++ b/src/css/global.sass
@@ -328,6 +328,15 @@ input
 		transition: opacity .3s
 		// display: none
 
+// .table-holder
+	// overflow: auto
+	// max-width: 100%
+	// table
+		// @media (max-width: $tablet)
+			// table-layout: auto
+			// border-collapse: collapse
+
+
 .active
 	color: $main-color
 
